modified:   package.json

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  }, 
+  "enginges": {
+    "node": "10.0.0"
+  }
   "author": "",
   "license": "ISC"
+  
 }
